<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_grande"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/imgmain"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        android:layout_marginBottom="@dimen/espaciado_grande"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMain_titulo"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        style="@style/display_grande_especial_accent"
        android:layout_marginBottom="@dimen/espaciado_pequeño"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/tvMain_parrafo"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        style="@style/texto_grande"
        android:layout_marginBottom="@dimen/espaciado_grande"/>
    <Button
        android:id="@+id/btEmpezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btMain_inicio_n"
        android:layout_centerInParent="true"
        style="@style/boton_accent"/> <!--onclick=empezar-->

</LinearLayout>