<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A09ContactoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_grande"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen_normal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/servicio"
                android:layout_marginTop="-20dp"/>
            <!--<ImageView
                android:layout_height="90dp"
                android:layout_width="120dp"
                android:src="@drawable/tienda2"
                android:layout_gravity="bottom|left"/>-->
            <ImageView
                android:layout_height="90dp"
                android:layout_width="120dp"
                android:src="@drawable/tienda3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="130dp"/>
        </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvContacto_nosotros_titulo"
        android:layout_centerInParent="true"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        style="@style/texto_grande"
        android:layout_marginBottom="@dimen/espaciado_pequeño"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvContacto_nosotros_texto"
        android:fontFamily="@font/criticized"
        android:layout_centerInParent="true"
        android:textAlignment="textStart"
        android:layout_marginBottom="@dimen/espaciado_grande"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvContacto_contacto_titulo"
            android:layout_centerInParent="true"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            style="@style/texto_grande"
            android:layout_marginBottom="@dimen/espaciado_pequeño"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_black_24dp"
            android:tint="@color/colorAccent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvContacto_direccion"
            android:fontFamily="@font/criticized"
            android:layout_marginBottom="@dimen/espaciado_grande"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email_black_24dp"
            android:tint="@color/colorAccent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvContacto_correo"
            android:fontFamily="@font/criticized"
            android:autoLink="email"
            android:layout_marginBottom="@dimen/espaciado_grande"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_black_24dp"
            android:tint="@color/colorAccent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvContacto_telefono"
            android:fontFamily="@font/criticized"
            android:autoLink="phone"
            android:layout_marginBottom="@dimen/espaciado_grande"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_web_black_24dp"
            android:tint="@color/colorAccent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvContacto_url"
            android:fontFamily="@font/criticized"
            android:autoLink="web"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>