<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margen_grande"
    android:padding="@dimen/padding_grande"
    tools:context=".A088RecomendacionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/espaciado_grande">
        <TextView
            android:id="@+id/tvPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recomendacion"
            android:layout_gravity="center"
            android:textAlignment="center"
            style="@style/display_mediano"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/espaciado_muy_grande">
        <TextView
            android:id="@+id/tvPromocion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="1 sándwich a S/14.00"
            style="@style/display_pequeño"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btAceptar"
            android:layout_width="@dimen/ancho_control_grande"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:layout_gravity="center"
            style="@style/boton_accent"
            android:layout_marginBottom="@dimen/espaciado_mediano"/>
        <Button
            android:id="@+id/btRechazar"
            android:layout_width="@dimen/ancho_control_grande"
            android:layout_height="wrap_content"
            android:text="@string/rechazar"
            android:layout_gravity="center"
            style="@style/boton_accent_inverso"/>
    </LinearLayout>

</LinearLayout>